Twitter API implemented
